# postgresql-db-generator

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
postgresql_db_generator/: main.py
scripts/: start.sh
src/: main.py
